WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
150995
Crash when subtree layout is set on FrameView while auto size mode is enabled.
https://bugs.webkit.org/show_bug.cgi?id=150995
Summary
Crash when subtree layout is set on FrameView while auto size mode is enabled.
alan
Reported
2015-11-06 21:11:33 PST
SSIA.
Attachments
Patch
(11.84 KB, patch)
2015-11-07 14:40 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(11.90 KB, patch)
2015-11-07 14:41 PST
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2015-11-07 14:40:27 PST
Created
attachment 265005
[details]
Patch
alan
Comment 2
2015-11-07 14:41:19 PST
Created
attachment 265006
[details]
Patch
alan
Comment 3
2015-11-07 14:41:41 PST
rdar://problem/22785262
WebKit Commit Bot
Comment 4
2015-11-07 16:50:41 PST
Comment on
attachment 265006
[details]
Patch Clearing flags on attachment: 265006 Committed
r192133
: <
http://trac.webkit.org/changeset/192133
>
WebKit Commit Bot
Comment 5
2015-11-07 16:50:45 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug