Source/WebCore/page/FrameView.h
@@ -677,6 +677,8 @@ private:
     void removeFromAXObjectCache();
     void notifyWidgets(WidgetNotification);
 
+    void convertSubtreeLayoutToFullLayout();
+
     RenderElement* viewportRenderer() const;
 
     HashSet<Widget*> m_widgetsInRenderTree;
